# wikters

./: Cargo.toml  DISCOVERIES.md  GRAMMAR.md  HANDOFF.md  NEXT_STEPS.md  README.md  REFACTOR_NOTES.md  STRUCTURE_FINDINGS.md  spozzy.rs  test_sample.xml
src/: handrolled.rs  heading_and_template_lists.rs  heading_lists.rs  lib.rs  main.rs  quick_xml_reader.rs  qwikt_reader.rs  regex_reader.rs  string_ops_reader.rs  wikitext_parser.rs  wikitext_splitter.rs
