[package]
name = "wikters"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
quick-xml = "0.38.3"
regex = "1.11.1"

[[bin]]
name = "template_inspector"
path = "src/bin/template_inspector.rs"

[[bin]]
name = "section_structure_inspector"
path = "src/bin/section_structure_inspector.rs"

[[bin]]
name = "etymology_pronunciation_analyzer"
path = "src/bin/etymology_pronunciation_analyzer.rs"

[[bin]]
name = "homograph_pattern_detector"
path = "src/bin/homograph_pattern_detector.rs"

[[bin]]
name = "dump_raw_sections"
path = "src/bin/dump_raw_sections.rs"

[[bin]]
name = "level4_heading_analyzer"
path = "src/bin/level4_heading_analyzer.rs"

[[bin]]
name = "pronunciation_nesting_analyzer"
path = "src/bin/pronunciation_nesting_analyzer.rs"

[[bin]]
name = "l3_order_analyzer"
path = "src/bin/l3_order_analyzer.rs"

[[bin]]
name = "l3_order_analyzer_v2"
path = "src/bin/l3_order_analyzer_v2.rs"
